# valiant-vita

./: CMakeLists.txt  README.md
livearea/: template.xml
loader/: dialog.c  main.c  sha1.c  so_util.c
